<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emp_detail_name"
            style="@style/main_text_black_normal_z"
            android:text="@string/str_name" />

        <TextView
            style="@style/main_text_black_normal_z"
            android:layout_marginLeft="30dp"
            android:text="@string/str_xingbie" />

        <TextView
            style="@style/main_text_black_normal_z"
            android:layout_marginLeft="30dp"
            android:text="@string/str_age" />

        <TextView
            style="@style/main_text_black_normal_z"
            android:layout_marginLeft="30dp"
            android:text="@string/str_minzu" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/main_text_black_normal_z"
            android:text="@string/str_idcard" />

        <TextView
            style="@style/main_text_black_normal_z"
            android:layout_marginLeft="30dp"
            android:text="@string/str_local_area" />

    </LinearLayout>

    <TextView
        style="@style/main_text_black_normal_z"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_hujidizhi" />

    <TextView
        style="@style/main_text_black_normal_z"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_juzhudizhi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/main_text_black_normal_z"
            android:text="@string/str_zhongdianjiancejibing" />

        <TextView
            style="@style/main_text_black_normal_z"
            android:layout_marginLeft="30dp"
            android:text="@string/str_jiancepinlv" />

    </LinearLayout>

    <TextView
        style="@style/main_text_black_normal_z"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_jianceneirong" />

    <TextView
        style="@style/main_text_black_normal_z"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_update_jiancefangshi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/main_text_black_normal_z"
            android:text="@string/str_update_querenren" />

        <TextView
            style="@style/main_text_black_normal_z"
            android:layout_marginLeft="30dp"
            android:text="@string/str_update_querenren" />

        <TextView
            style="@style/main_text_black_normal_z"
            android:layout_marginLeft="30dp"
            android:text="@string/str_update_qurenriqi" />

    </LinearLayout>

</LinearLayout>