<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/app_ploaddata"
        android:textSize="30sp" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/main_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/str_questionnaire_upload"
                android:textSize="25sp"
                android:background="@color/main_blue"
                android:textColor="@color/main_white"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/shape_red_dot"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >

        <Button
            android:id="@+id/update_btn_feedback_upload"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/main_puper"
            android:text="@string/str_feedback_information_upload"
            android:textColor="@color/main_white"
            android:textSize="25sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/shape_red_dot"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/shape_red_dot"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/str_upload_all"
            android:textSize="25sp"
            android:textColor="@color/main_white"
            android:id="@+id/update_btn_all_upload"
            android:layout_marginLeft="50dp"
            android:background="@color/main_blue_deep"
            />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/shape_red_dot"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                />

        </RelativeLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical"
        android:text="更新数据"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/main_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >


        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/main_green"
            android:text="调查问卷获取"
            android:textColor="@color/main_white"
            android:textSize="25sp"
            android:id="@+id/update_btn_update_question" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/shape_red_dot"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="重点监测内容获取"
            android:textSize="25sp"
            android:textColor="@color/main_white"
            android:layout_marginLeft="50dp"
            android:background="@color/main_red"
            android:id="@+id/update_btn_update_emphases" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/shape_red_dot"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="更新个人信息"
            android:textSize="25sp"
            android:textColor="@color/main_white"
            android:layout_marginLeft="50dp"
            android:background="@color/main_organ"
            android:id="@+id/update_btn_update_userinfo" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/shape_red_dot"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>